<resources>
    <string name="app_name">EcoStay Retreat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="field_required">Field required</string>
    <string name="welcome">Welcome to EcoStay</string>


    <string name="rooms">Rooms</string>
    <string name="activities">Activities</string>
    <string name="bookings">Bookings</string>
    <string name="eco_info">Eco Info</string>
    <string name="profile">Profile</string>

    <string name="book_now">Book Now</string>
    <string name="price_per_night">Price per night: $%1$.2f</string>
    <string name="price_per_person">Price per person: $%1$.2f</string>
    <string name="nights">Nights</string>
    <string name="participants">Participants</string>
    <string name="total_price">Total: $%1$.2f</string>
    <string name="booking_confirmed">Booking Confirmed!</string>
    <string name="logout">Logout</string>
</resources>