<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_rooms"
        android:icon="@drawable/ic_home"
        android:title="@string/rooms" />
    <item
        android:id="@+id/nav_activities"
        android:icon="@drawable/ic_compass"
        android:title="@string/activities" />
    <item
        android:id="@+id/nav_bookings"
        android:icon="@drawable/ic_agenda"
        android:title="@string/bookings" />
    <item
        android:id="@+id/nav_eco"
        android:icon="@drawable/ic_info"
        android:title="@string/eco_info" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>
